indico/modules/events/timetable/templates/pdf/timetable.css
* {
  font-family: Lato;
}

.pagebreak {
  break-after: always;
}

.cover {
  counter-reset: program-page 7;
  min-height: 100vh;
}

.cover > div.cover-wrapper {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 2px solid rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
}

.cover > div.cover-wrapper > div {
  text-align: center;
  width: 100%;
}

.toc {
  page: toc;
}

.toc h1 {
  text-align: center;
}

.toc ol {
  padding: 0;
}

.toc .toc-item {
  list-style: none;
  margin-top: 0.5em;
}

.toc > ol > .toc-item {
  padding-top: 1em;
}

.toc .toc-item .toc-item {
  padding-left: 5em;
}

.toc .toc-item a::after {
  content: leader('.') target-counter(attr(href), page, decimal);
}

.toc .toc-item a {
  text-decoration: none;
}

#footer {
  position: running(footer);
}

#footer::after {
  content: target-counter('#footer', page, decimal);
}

/* body {
  border: 1px solid green;
} */

.time-and-place {
  /* line-height: 1.2em; */
  /* max-width: 30%; */
}

.content {
  /* padding-left: 2em; */
}

.day-program {
  width: 100%;
  border: none;
  border-collapse: collapse;
}

table,
tr,
td {
  border: none;
}

.day-program td {
  padding: 0.5em;
  vertical-align: top;
}

/* Ajob addition */

.session-block {
  display: flex;
  /* border: 1px solid red; */
  margin-bottom: 10px;
}

.session-block.contribution .session-block-title {
  background-color: rgb(175, 69, 113); /* TODO: Replace with contrib color */
  color: white;
}

.session-block-wrapper {
  flex-grow: 1;
  /* border: 1px solid green; */
}

.session-block-title {
  margin: 0;
  /* border: 1px solid blue; */
  padding: 10px;
  border-radius: 5px;
  flex-grow: 1;
  min-height: 62px;
  box-sizing: border-box;
}

.session-block-title > h3 {
  margin: 0;
}

.session-block-title-info {
  display: flex;
  font-size: 0.8em;
}

.session-block-title-info > * {
  margin: 0;
}

.session-block-title-info > *:not(:last-child)::after {
  content: '|';
  opacity: 0.5;
  margin: 0 5px;
}

.session-block-title > h2 {
  margin: 0;
}

.session-block-content {
  width: 100%;
}

.day-title {
  margin: 40px 0;
}

.time {
  margin-right: 10px;
  /* border: 1px solid orange; */
  width: 80px;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: rgba(0, 0, 0, 0.6);
}

.time > div:first-child {
  padding-bottom: 5px;
}

.time > div:last-child {
  padding-top: 5px;
}

.time > .time-divider {
  width: 4px;
  flex-grow: 1;
  background-color: rgba(0, 0, 0, 0.1);
}

.contrib-timeline {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  list-style-type: none;
}

.contrib-timeline > li {
  margin: 0;
  padding: 10px;
  border: 2px solid rgba(0, 0, 0, 0.1);
  border-top: 0;
}

.contrib-timeline > li:last-child {
  border-radius: 0 0 3px 3px;
}

.contrib-timeline > li > h4 {
  margin: 0;
}

.contrib-timeline > li > h4 > .contrib-timeline-time {
  text-align: center;
  padding: 4px 8px 4px 12px;
  font-size: 0.8em;
  border-radius: 100px;
  font-weight: normal;
  margin-right: 10px;
}

.contrib-timeline > li > .contrib-timeline-content {
  padding: 10px;
}

.contrib-timeline-content {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  font-size: 0.8em;
}

.contrib-timeline-content > * {
  margin: 0;
}

.contrib-timeline-content > :is(p, div) b {
  line-height: 2em;
}

.contrib-timeline-content > :is(p, div):not(:last-child) {
  margin: 0;
  margin-bottom: 10px;
}

.contrib-timeline-content .description {
  padding-bottom: 5px;
}

.contrib-timeline-content .description > *:last-child {
  margin: 0;
  padding: 0 10px;
  background-color: rgba(0, 0, 0, 0.1);
  display: flex;
}

